Adding an intro and documenting features about the layouts and the index

--- a/html/index.hbs
+++ b/html/index.hbs
@@ -1,4 +1,14 @@
 <div id="docs-page" class="container">
+  <div class="docs">
+    <h3 class="">Introduction</h3>
+    <h4>Katacoda is a tool to create real environments for learning about information technology. Each student can acces to a new environment any time he wants without the need to install all the required component by himself. Katacoda also provides isolation for each student, so he can explore and push the limits of his learning skills without worry about breaking the environment for fellow students. Normally, each environment that has been created can run the latest version of any software you can bring to a Docker instance. This deployment is a self contained environment that provides everything the studen could need to be successful in learning with the platform. This includes such things as the command line, web console, and public URLs.</h4>
+  </div>
+
+  <div class="docs">
+    <h3 class="">How it works?</h3>
+    <h4>During the training course, the student will be using a hosted environment that is created just for him. This environment is not shared with other users of the system. Because each user taking this training has their own environment, we had to make some concessions to ensure the overall platform is stable and used only for this training. For that reason, each environment will only be active for a one hour period. Keep this in mind before embarking on design the content of each course. Each time the student reload the web, a new environment will be created on the fly.</h4>
+  </div>
+
   <div class="col s12 center">
     <h2 class="">Katacoda Documentation</h2>
     <h4>Creating your first Katacoda Interactive scenario? Complete one of our two interactive scenarios below.</h4>
