--- a/html/scenarios/layouts.hbs
+++ b/html/scenarios/layouts.hbs
@@ -28,6 +28,18 @@
                         <td>terminal-editor</td>
                         <td><a href="/courses/docker/create-nginx-static-web-server" target="_blank">Link</a></td>
                     </tr>
+                    <tr>
+                        <td>Terminal + Editor for the embeded presentation</td>
+                        <td>editor-terminal-split</td>
+                        <td><a href=""https://kontena.io/learn/scenario1 target="_blank">Link</a></td>
+                        <td>Make sure to include data-katacoda-layout="editor-terminal-split" in the html for the embeded code.</td>
+                    </tr>
+                    <tr>
+                        <td>Terminal + Iframe (application inside the dashboard)</td>
+                        <td>terminal-iframe</td>
+                        <td><a href="/courses/jenkins/build-docker-images" target="_blank">Link</a></td>
+                        <td><a href="https://github.com/katacoda-scenarios/jenkins-scenarios/blob/master/build-docker-images/index.json" target="_blank">Source</a></td>
+                    </tr>
                 </tbody>
             </table>
 
